TAG: noteload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: noteload-6-0-7-2
DATE: 01/31/2017
STAFF: sc
CHANGES: TR9835 location notes
1) mginoteload.csh - bug  ${NOTELOAD}/Configuration sourced; NOTELOAD defined
   in Configuration

TAG: noteload-6-0-7-1
DATE: 01/05/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: noteload-6-0-4-1
DATE: 04/12/2016, 05/04/2016
STAFF: lec
CHANGES:
1) using new postgres scripts in bcpFiles()

TAG: noteload-6-0-0-1
DATE: 07/24/2015
STAFF: lec
CHANGES:
1) TR11750/postgres

TAG: noteload-5-2-1-3
DATE: 2015/06/12
STAFF: kstone
1) postgres

TAG: noteload-tr11750-BP
DATE: 04/09/2015
STAFF: kstone


TAG: noteload-5-2-1-2
TAG: noteload-5-2-1-1
DATE: 12/16/2014, 01/20/2015
STAFF: lec
CHANGES:
1) TR11750/postgres : added logic for postgres version
2) gotext.config : source Configuration file

TAG: noteload-5-1-0-1
DATE: 10/19/2012
STAFF: dbm
CHANGES:
1) TR11163: Config changes

TAG: noteload-4-4-1-2
DATE: 04/03/2011
STAFF: lec
CHANGES: fix gotext.config back
setenv NOTEDATADIR      /data/loads/go/gotext

TAG: noteload-4-4-1-1
DATE: 12/28/2010
STAFF: lec
CHANGES: fix gotext.config
setenv NOTEDATADIR      /data/loads/go/gotext/output

TAG: noteload-3-5-1-4
DATE: 09/29/2006
STAFF: lec
CHANGES: TR 7894;mgiconfig

TAG: noteload-3-5-1-3
TAG: noteload-3-5-1-2
DATE: 09/21/2006
STAFF: lec
CHANGES: TR 7894;mgiconfig

TAG: noteload-3-5-1-1
DATE: 09/06/2006
STAFF: lec
CHANGES: build 36; merge

TAG: noteload-build36-1
DATE: 08/22/2006
STAFF: lec
CHANGES: build 36

TAG: noteload-build36-BP
DATE: 08/21/2006
STAFF: lec
CHANGES: build 36 branch point tag

TAG: noteload-3-3-0-3
DATE: 11/18/2005
STAFF: lec
CHANGES: gotextload.csh; fixed for production

TAG: noteload-3-3-0-2
DATE: 10/21/2005
STAFF: lec
CHANGES: added incremental mode

TAG: noteload-3-3-0-1
DATE: 09/26/2005
STAFF: lec
CHANGES: don't generate a Note record if the len(note) == 0

TAG: noteload-3-2-0-3
DATE: 04/21/2005
STAFF: lec