@@ -1,3 +1,8 @@
+TAG: noteload-6-0-16-2
+DATE: 01/04/2021
+STAFF: sc
+CHANGES: implement incremental sql file execution
+
 TAG: noteload-6-0-16-1
 DATE: 08/21/2020
 STAFF: sc
